last update khong chac

--- a/src/gui/LoginForm.form
+++ b/src/gui/LoginForm.form
@@ -172,7 +172,8 @@
         </Component>
         <Component class="gui.QuenMatKhau.textfield.TextField" name="txtTaiKhoan">
           <Properties>
-            <Property name="text" type="java.lang.String" value="NVTRANVietNHan"/>
+            <Property name="text" type="java.lang.String" value="NV120924005"/>
+            <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtTaiKhoanActionPerformed"/>
