--- a/src/gui/menu/Menu.form
+++ b/src/gui/menu/Menu.form
@@ -19,7 +19,7 @@
           <Component id="sp" pref="0" max="32767" attributes="0"/>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Component id="profile2" max="32767" attributes="0"/>
+              <Component id="profile2" pref="277" max="32767" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
